Removed to fix center alignment problems for mobile

--- a/src/components/prompt-template/index.module.scss
+++ b/src/components/prompt-template/index.module.scss
@@ -30,7 +30,6 @@ label {
 
 .prompt {
   margin: 1rem 0;
-  padding-left: 2rem;
 }
 
 .promptLabel {
